# sumo-pipelines

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  README.md  execute.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: CI.yml
configurations/: cf_defaults.yaml  cf_sampling.yaml  ray_cluster_config.yaml
cpp/: sumo_pipelines.cpp
cpp/include/: libsumo_wrapper.h
crates/sumo-pipelines-rs/: Cargo.toml
crates/sumo-pipelines-rs/src/: lib.rs
crates/sumo-pipelines-rs/src/geom/: utils.rs
crates/sumo-pipelines-rs/src/xml_parsing/: emissions.rs  mod.rs
crates/sumo-pipelines-rs/tests/test_data/: emissions.parquet  emissions.parquet2  emissions.xml
pipelines/: config.py  pipeline_constructor.py
pipelines/blocks/: __init__.py
pipelines/blocks/detectorlocations/: detectorlocations.py
pipelines/blocks/io/: config.py  functions.py
pipelines/blocks/producers/: __init__.py  config.py  functions.py
pipelines/blocks/routesampler/: routesampler.py
pipelines/blocks/simulation/: __init__.py  config.py  functions.py
pipelines/blocks/vehicle_distributions/: config.py  functions.py
pipelines/blocks/xml/: config.py
python/sumo_pipelines/: config.py  execute.py  run.py
python/sumo_pipelines/blocks/: __init__.py
python/sumo_pipelines/blocks/additional/: config.py  functions.py
python/sumo_pipelines/blocks/calibration/: config.py  functions.py
python/sumo_pipelines/blocks/detectorlocations/: config.yaml  detectorlocations.py
python/sumo_pipelines/blocks/emissions/: config.py  functions.py
python/sumo_pipelines/blocks/io/: config.py  functions.py
python/sumo_pipelines/blocks/nested/: config.py  functions.py
python/sumo_pipelines/blocks/producers/: __init__.py  config.py  functions.py
python/sumo_pipelines/blocks/randomness/: config.py  functions.py
python/sumo_pipelines/blocks/routesampler/: config.py  functions.py
python/sumo_pipelines/blocks/simulation/: config.py  functions.py
python/sumo_pipelines/blocks/simulation_complex/: config.py  functions.py
python/sumo_pipelines/blocks/vehicle_distributions/: config.py  functions.py
python/sumo_pipelines/blocks/xml/: config.py  functions.py
python/sumo_pipelines/configurations/: cf_sampling.yaml
python/sumo_pipelines/optimization/: config.py  core.py  optimize.py  utils.py
python/sumo_pipelines/pipe_handlers/: create.py
python/sumo_pipelines/utils/: __init__.py  calibration_utils.py  config_helpers.py  file_helpers.py  geo_helpers.py  queue_helpers.py
sumo_pipelines/: _config_stubs.py  config.py  execute.py  optimize.py  run.py
sumo_pipelines/blocks/: __init__.py
sumo_pipelines/blocks/additional/: config.py  functions.py
sumo_pipelines/blocks/calibration/: config.py  functions.py
sumo_pipelines/blocks/detectorlocations/: config.yaml  detectorlocations.py
sumo_pipelines/blocks/emissions/: config.py  functions.py
sumo_pipelines/blocks/io/: config.py  functions.py
sumo_pipelines/blocks/nested/: config.py  functions.py
sumo_pipelines/blocks/producers/: config.py  functions.py
sumo_pipelines/blocks/randomness/: config.py  functions.py
sumo_pipelines/blocks/routesampler/: __init__.py  config.py  functions.py
sumo_pipelines/blocks/signals/: config.py  functions.py
sumo_pipelines/blocks/simulation/: config.py  functions.py
sumo_pipelines/blocks/simulation_complex/: config.py  functions.py
sumo_pipelines/blocks/vehicle_distributions/: __init__.py  config.py  functions.py
sumo_pipelines/blocks/xml/: config.py  functions.py
sumo_pipelines/configurations/: cf_sampling.yaml
sumo_pipelines/configurations/standard/output/: fcd.yaml
sumo_pipelines/cpp/: __init__.py
sumo_pipelines/optimization/: config.py  core.py  optimize.py  utils.py
sumo_pipelines/pipe_handlers/: __init__.py  create.py
sumo_pipelines/utils/: calibration_utils.py  config_helpers.py  emissions_helpers.py  file_helpers.py  geo_helpers.py  nema_utils.py  queue_helpers.py  stats_utils.py
tests/blocks/producers/: test_sobol.py
tests/utils/: test_geom.py
