[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "sumo-pipelines"
version = "1.1.5"
urls = { homepage = "https://github.com/mschrader15/sumo-pipelines" }

[tool.maturin]
python-source = "python"
manifest-path = "crates/sumo-pipelines-rs/Cargo.toml"
module-name = "sumo_pipelines.sumo_pipelines_rs"
sdist-include = ["README.md"]

[project.scripts]
sumo-pipe = "sumo_pipelines.execute:main"
sumo-calibrate = "sumo_pipelines.execute:optimize"
