[build-system]
requires = ["setuptools>=42", "wheel", "ninja", "cmake>=3.12", "setuptools-scm"]
build-backend = "setuptools.build_meta"

# [tool.mypy]
# files = "setup.py"
# python_version = "3.7"
# strict = true
# show_error_codes = true
# enable_error_code = ["ignore-without-code", "redundant-expr", "truthy-bool"]
# warn_unreachable = true
# [[tool.mypy.overrides]]
# module = ["ninja"]
# ignore_missing_imports = true


[tool.pytest.ini_options]
minversion = "6.0"
addopts = ["-ra", "--showlocals", "--strict-markers", "--strict-config"]
xfail_strict = true
filterwarnings = [
    "error",
    "ignore:(ast.Str|Attribute s|ast.NameConstant|ast.Num) is deprecated:DeprecationWarning:_pytest",
]
testpaths = ["tests"]

[tool.cibuildwheel]
test-command = "pytest {project}/tests"
test-extras = ["test"]
test-skip = ["*universal2:arm64"]
# Setuptools bug causes collision between pypy and cpython artifacts
before-build = "rm -rf {project}/build"

[tool.ruff]
target-version = "py37"

[tool.ruff.lint]
extend-select = [
    "B",   # flake8-bugbear
    "I",   # isort
    "PGH", # pygrep-hooks
    "RUF", # Ruff-specific
    "UP",  # pyupgrade
]

[tool.setuptools.package-data]
'sumo_pipelines' = ['*.yaml']

[project]
name = "sumo-pipelines"
version = "1.1.6"
urls = { homepage = "https://github.com/mschrader15/sumo-pipelines" }
readme = "README.md"
description = "A collection of pipelines for processing SUMO output data."

# put the required packages in the `install_requires` list

dependencies = [
    "cachetools",
    "click",
    "lxml",
    "numba",
    "numpy",
    "omegaconf",
    "pandas",
    "polars",
    "pyarrow",
    "ray[tune]",
    "simpleeval",
    "sumolib"

]


[project.scripts]
sumo-pipe = "sumo_pipelines.execute:main"
sumo-calibrate = "sumo_pipelines.execute:optimize"
