[package]
name = "sumo-pipelines-rs"
version = "0.1.0"
edition = "2021"


[lib]
name = "sumo_pipelines_rs"
crate-type = ["cdylib"]


[dependencies]
polars = { version = "0.32.1", features = ["parquet"] }
pyo3 = {version = "0.19.0", features = ["extension-module"]}
quick-xml = { version = "0.30.0", features = ["serialize"] }
serde = { version = "1.0.188", features = ["derive"] }

